# dogIA

./: README.md  image.py  pyproject.toml
.github/workflows/: dependencies.yml
